--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontendmentor-profile-card-component",
+  "name": "profile-card-component",
   "version": "1.0.0",
-  "description": "This is my take on the FrontEndMentor - Profile Card Component.",
+  "description": "My take on the profile card component challenge.",
   "main": "index.html",
   "scripts": {
     "start": "serve",
